api documentation autogeneration refactor
